# Chatportal

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
electron/: main.js
server/: Dockerfile  package.json
server/src/: index.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: LoginScreen.tsx
src/components/Chat/: CallModal.tsx  ChatHeader.tsx  ChatView.tsx  Message.tsx  MessageInput.tsx  MessageList.tsx
src/components/Sidebar/: ChatFolders.tsx  ChatItem.tsx  ChatList.tsx  CreateChatModal.tsx  NewChatModal.tsx  SidebarMenu.tsx
src/components/common/: Avatar.tsx
src/services/: api.ts  websocket.ts
src/stores/: authStore.ts  chatStore.ts
src/types/: index.ts
